--- a/frontend/style.css
+++ b/frontend/style.css
@@ -34,3 +34,26 @@
     text-align: center;
     margin-top: 1rem;
 }
+
+.container_definition {
+    text-align: center;
+    margin: 3rem auto 0;
+    width: 50%;
+}
+
+.definition_texas_holdem {
+    color:#363636;
+    font-size: 1.3rem;
+    padding: 2rem 1rem;
+    background-color: rgb(250, 250, 250);
+    border-radius: 8px;
+}
+
+.purpose_holdem {
+    margin-top: 1.4rem;
+    color:#363636;
+    font-size: 1.3rem;
+    padding: 2rem 1rem;
+    background-color: rgb(250, 250, 250);
+    border-radius: 8px;
+}
