--- a/frontend/style.css
+++ b/frontend/style.css
@@ -50,13 +50,19 @@
 }
 
 .purpose_holdem {
-    margin-top: 1.4rem;
+    margin-top: 1rem;
     color:#363636;
     font-size: 1.3rem;
     padding: 2rem 1rem;
     background-color: rgb(250, 250, 250);
     border-radius: 8px;
 }
+
+
+
+
+
+/* for mobile */
 
 @media (max-width: 480px) {
     .text_rules {
@@ -86,6 +92,6 @@
     }
     
     .preface_to_head br {
-        display: none; /* Убираем переносы на мобильных */
+        display: none; 
     }
 }
