--- a/frontend/style.css
+++ b/frontend/style.css
@@ -50,7 +50,7 @@
 }
 
 .purpose_holdem {
-    margin-top: 1rem;
+    margin-top: 1.2rem;
     color:#363636;
     font-size: 1.3rem;
     padding: 2rem 1rem;
@@ -84,8 +84,13 @@
         margin: 1.5rem auto 0;
     }
     
-    .definition_texas_holdem,
+    .definition_texas_holdem {
+        font-size: 1rem;
+        padding: 1rem 0.8rem;
+        line-height: 1.4;
+    }
     .purpose_holdem {
+        margin-top: 0.8rem;
         font-size: 1rem;
         padding: 1rem 0.8rem;
         line-height: 1.4;
