--- a/frontend/style.css
+++ b/frontend/style.css
@@ -10,8 +10,6 @@
     color:#333;
     font-size: 2rem;
     font-weight: 700;
-    display: flex;
-    justify-content: center;
     margin-top: 1.8rem;
     text-align: center;
 }
@@ -20,8 +18,6 @@
     color:#363636;
     font-size: 1.85rem;
     font-weight: 700;
-    display: flex;
-    justify-content: center;
     text-align: center;
 }
 
@@ -29,8 +25,6 @@
     color:#363636;
     font-size: 1.5rem;
     font-weight: 500;
-    display: flex;
-    justify-content: center;
     text-align: center;
     margin-top: 1rem;
 }
@@ -38,19 +32,14 @@
 .container_definition {
     text-align: center;
     margin: 3rem auto 0;
-    width: 50%;
+    width: 55%;
+    gap: 1.2rem;
+    display: grid;
+    place-items: center;
 }
 
-.definition_texas_holdem {
-    color:#363636;
-    font-size: 1.3rem;
-    padding: 2rem 1rem;
-    background-color: rgb(250, 250, 250);
-    border-radius: 8px;
-}
-
+.definition_texas_holdem,
 .purpose_holdem {
-    margin-top: 1.2rem;
     color:#363636;
     font-size: 1.3rem;
     padding: 2rem 1rem;
@@ -58,6 +47,28 @@
     border-radius: 8px;
 }
 
+.text_poker_combination {
+    color:#363636;
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+.image_poker_combination {
+    background-image: url('/frontend/image/combination_poker.png');
+    width: 830px;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; 
+    margin-bottom: 1.2rem;    
+    border-radius: 8px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease;
+}
+
+.image_poker_combination:hover {
+    transform: scale(1.005);
+}
 
 
 
