--- a/frontend/style.css
+++ b/frontend/style.css
@@ -101,7 +101,7 @@
         line-height: 1.4;
     }
     .purpose_holdem {
-        margin-top: 0.8rem;
+        /* margin-top: 0.8rem; */
         font-size: 1rem;
         padding: 1rem 0.8rem;
         line-height: 1.4;
@@ -109,5 +109,10 @@
     
     .preface_to_head br {
         display: none; 
+    }
+
+    .image_poker_combination {
+        width: 480px;
+        height: 215px;
     }
 }
