--- a/frontend/style.css
+++ b/frontend/style.css
@@ -62,9 +62,9 @@
     transition: all 0.3s ease;
 }
 
-/* .image_poker_combination img:hover {
+.image_poker_combination img:hover {
     transform: scale(1.005);
-} */
+}
 
 
 
