--- a/frontend/style.css
+++ b/frontend/style.css
@@ -55,7 +55,7 @@
 
 .image_poker_combination img {
     width: 100%;
-    height: 160px;
+    height: auto;
     border-radius: 8px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
     margin-bottom: 1.2rem;    
@@ -114,7 +114,9 @@
 
     .image_poker_combination img {
         max-width: 320px;
-        height: 160px;
+        max-height: 160px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        border-radius: 8px;
+        margin-bottom: .6rem;
     }
 }
