--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,6 +66,21 @@
     transform: scale(1.005);
 }
 
+.definition_rules_texas_holdem {
+    color:#363636;
+    font-size: 1.3rem;
+    padding: 1.5rem 1rem;
+    background-color: rgb(250, 250, 250);
+    border-radius: 8px;
+}
+
+.definition_rules_texas_holdem_position {
+    gap: 1rem;
+    display: grid;
+    place-items: center;
+    margin-bottom: 1.5rem;
+}
+
 
 
 
@@ -117,4 +132,16 @@
         max-height: 160px;
         margin-bottom: .6rem; 
     }
+
+    .definition_rules_texas_holdem {
+        font-size: 1rem;
+        padding: 0.8rem 0.8rem;
+        line-height: 1.4;
+    }
+
+    .definition_rules_texas_holdem_position {
+        margin-bottom: .8rem;
+        gap: .6rem;
+    }
+
 }
